script/eiscript.output
State 3 conflicts: 1 shift/reduce
State 7 conflicts: 1 shift/reduce
State 37 conflicts: 1 shift/reduce
State 51 conflicts: 2 shift/reduce
State 67 conflicts: 1 shift/reduce


Grammar

    0 $accept: eiscript $end

    1 eiscript: globalVars declarations scripts worldscript

    2 globalVars: GLOBALVARS '(' globalVarsDefs ')'

    3 declarations: /* empty */
    4             | script_declaration
    5             | declarations script_declaration

    6 scripts: /* empty */
    7        | script_implementation
    8        | scripts script_implementation

    9 worldscript: WORLDSCRIPT '(' script_then_body ')'

   10 globalVarsDefs: /* empty */
   11               | globalVarDef
   12               | globalVarsDefs ',' globalVarDef

   13 globalVarDef: ident ':' type

   14 script_declaration: DECLARESCRIPT ident formal_params

   15 script_implementation: SCRIPT ident '(' script_body ')'

   16 script_body: script_block
   17            | script_body script_block

   18 script_block: script_if_block script_then_block

   19 script_if_block: IF '(' if_conjunction ')'

   20 if_conjunction: /* empty */
   21               | float_expression
   22               | if_conjunction float_expression

   23 script_then_block: THEN '(' script_then_body ')'

   24 script_then_body: /* empty */
   25                 | function_call
   26                 | assignment
   27                 | script_then_body function_call
   28                 | script_then_body assignment

   29 formal_params: '(' formal_parameter_list ')'

   30 formal_parameter_list: formal_parameter_list ',' formal_parameter
   31                      | formal_parameter

   32 formal_parameter: ident ':' type

   33 params: '(' actual_parameter_list ')'

   34 actual_parameter_list: actual_parameter_list ',' actual_parameter
   35                      | actual_parameter
   36                      | /* empty */

   37 actual_parameter: expression

   38 expression: FLOATNUMBER
   39           | CHARACTER_STRING
   40           | ident
   41           | assignment
   42           | function_call

   43 float_expression: FLOATNUMBER
   44                 | ident
   45                 | function_call

   46 assignment: ident '=' expression

   47 function_call: ident params

   48 type: FLOAT
   49     | STRING
   50     | OBJECT
   51     | GROUP

   52 ident: IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
'(' (40) 2 9 15 19 23 29 33
')' (41) 2 9 15 19 23 29 33
',' (44) 12 30 34
':' (58) 13 32
'=' (61) 46
error (256)
FLOAT (258) 48
STRING (259) 49
OBJECT (260) 50
GROUP (261) 51
FLOATNUMBER (262) 38 43
CHARACTER_STRING (263) 39
GLOBALVARS (264) 2
DECLARESCRIPT (265) 14
SCRIPT (266) 15
IF (267) 19
THEN (268) 23
WORLDSCRIPT (269) 9
IDENTIFIER (270) 52


Nonterminals, with rules where they appear

$accept (21)
    on left: 0
eiscript (22)
    on left: 1, on right: 0
globalVars (23)
    on left: 2, on right: 1
declarations (24)
    on left: 3 4 5, on right: 1 5
scripts (25)
    on left: 6 7 8, on right: 1 8
worldscript (26)
    on left: 9, on right: 1
globalVarsDefs (27)
    on left: 10 11 12, on right: 2 12
globalVarDef (28)
    on left: 13, on right: 11 12
script_declaration (29)
    on left: 14, on right: 4 5
script_implementation (30)
    on left: 15, on right: 7 8
script_body (31)
    on left: 16 17, on right: 15 17
script_block (32)
    on left: 18, on right: 16 17
script_if_block (33)
    on left: 19, on right: 18
if_conjunction (34)
    on left: 20 21 22, on right: 19 22
script_then_block (35)
    on left: 23, on right: 18
script_then_body (36)
    on left: 24 25 26 27 28, on right: 9 23 27 28
formal_params (37)
    on left: 29, on right: 14
formal_parameter_list (38)
    on left: 30 31, on right: 29 30
formal_parameter (39)
    on left: 32, on right: 30 31
params (40)
    on left: 33, on right: 47
actual_parameter_list (41)
    on left: 34 35 36, on right: 33 34
actual_parameter (42)
    on left: 37, on right: 34 35
expression (43)
    on left: 38 39 40 41 42, on right: 37 46
float_expression (44)
    on left: 43 44 45, on right: 21 22
assignment (45)
    on left: 46, on right: 26 28 41
function_call (46)
    on left: 47, on right: 25 27 42 45
type (47)
    on left: 48 49 50 51, on right: 13 32
ident (48)
    on left: 52, on right: 13 14 15 32 40 44 46 47


state 0

    0 $accept: . eiscript $end

    GLOBALVARS  shift, and go to state 1

    eiscript    go to state 2
    globalVars  go to state 3


state 1

    2 globalVars: GLOBALVARS . '(' globalVarsDefs ')'

    '('  shift, and go to state 4


state 2

    0 $accept: eiscript . $end

    $end  shift, and go to state 5


state 3

    1 eiscript: globalVars . declarations scripts worldscript

    DECLARESCRIPT  shift, and go to state 6

    DECLARESCRIPT  [reduce using rule 3 (declarations)]
    $default       reduce using rule 3 (declarations)

    declarations        go to state 7
    script_declaration  go to state 8


state 4

    2 globalVars: GLOBALVARS '(' . globalVarsDefs ')'

    IDENTIFIER  shift, and go to state 9

    $default  reduce using rule 10 (globalVarsDefs)

    globalVarsDefs  go to state 10
    globalVarDef    go to state 11
    ident           go to state 12


state 5

    0 $accept: eiscript $end .

    $default  accept


state 6

   14 script_declaration: DECLARESCRIPT . ident formal_params

    IDENTIFIER  shift, and go to state 9

    ident  go to state 13


state 7

    1 eiscript: globalVars declarations . scripts worldscript
    5 declarations: declarations . script_declaration

    DECLARESCRIPT  shift, and go to state 6
    SCRIPT         shift, and go to state 14

    SCRIPT    [reduce using rule 6 (scripts)]
    $default  reduce using rule 6 (scripts)

    scripts                go to state 15
    script_declaration     go to state 16
    script_implementation  go to state 17


state 8

    4 declarations: script_declaration .

    $default  reduce using rule 4 (declarations)


state 9

   52 ident: IDENTIFIER .

    $default  reduce using rule 52 (ident)


state 10

    2 globalVars: GLOBALVARS '(' globalVarsDefs . ')'
   12 globalVarsDefs: globalVarsDefs . ',' globalVarDef

    ')'  shift, and go to state 18
    ','  shift, and go to state 19


state 11

   11 globalVarsDefs: globalVarDef .

    $default  reduce using rule 11 (globalVarsDefs)


state 12

   13 globalVarDef: ident . ':' type

    ':'  shift, and go to state 20


state 13

   14 script_declaration: DECLARESCRIPT ident . formal_params

    '('  shift, and go to state 21

    formal_params  go to state 22


state 14

   15 script_implementation: SCRIPT . ident '(' script_body ')'

    IDENTIFIER  shift, and go to state 9

    ident  go to state 23


state 15

    1 eiscript: globalVars declarations scripts . worldscript
    8 scripts: scripts . script_implementation

    SCRIPT       shift, and go to state 14
    WORLDSCRIPT  shift, and go to state 24

    worldscript            go to state 25
    script_implementation  go to state 26


state 16

    5 declarations: declarations script_declaration .

    $default  reduce using rule 5 (declarations)


state 17

    7 scripts: script_implementation .

    $default  reduce using rule 7 (scripts)


state 18

    2 globalVars: GLOBALVARS '(' globalVarsDefs ')' .

    $default  reduce using rule 2 (globalVars)


state 19

   12 globalVarsDefs: globalVarsDefs ',' . globalVarDef

    IDENTIFIER  shift, and go to state 9

    globalVarDef  go to state 27
    ident         go to state 12


state 20

   13 globalVarDef: ident ':' . type

    FLOAT   shift, and go to state 28
    STRING  shift, and go to state 29
    OBJECT  shift, and go to state 30
    GROUP   shift, and go to state 31

    type  go to state 32


state 21

   29 formal_params: '(' . formal_parameter_list ')'

    IDENTIFIER  shift, and go to state 9

    formal_parameter_list  go to state 33
    formal_parameter       go to state 34
    ident                  go to state 35


state 22

   14 script_declaration: DECLARESCRIPT ident formal_params .

    $default  reduce using rule 14 (script_declaration)


state 23

   15 script_implementation: SCRIPT ident . '(' script_body ')'

    '('  shift, and go to state 36


state 24

    9 worldscript: WORLDSCRIPT . '(' script_then_body ')'

    '('  shift, and go to state 37


state 25

    1 eiscript: globalVars declarations scripts worldscript .

    $default  reduce using rule 1 (eiscript)


state 26

    8 scripts: scripts script_implementation .

    $default  reduce using rule 8 (scripts)


state 27

   12 globalVarsDefs: globalVarsDefs ',' globalVarDef .

    $default  reduce using rule 12 (globalVarsDefs)


state 28

   48 type: FLOAT .

    $default  reduce using rule 48 (type)


state 29

   49 type: STRING .

    $default  reduce using rule 49 (type)


state 30

   50 type: OBJECT .

    $default  reduce using rule 50 (type)


state 31

   51 type: GROUP .

    $default  reduce using rule 51 (type)


state 32

   13 globalVarDef: ident ':' type .

    $default  reduce using rule 13 (globalVarDef)


state 33

   29 formal_params: '(' formal_parameter_list . ')'
   30 formal_parameter_list: formal_parameter_list . ',' formal_parameter

    ')'  shift, and go to state 38
    ','  shift, and go to state 39


state 34

   31 formal_parameter_list: formal_parameter .

    $default  reduce using rule 31 (formal_parameter_list)


state 35

   32 formal_parameter: ident . ':' type

    ':'  shift, and go to state 40


state 36

   15 script_implementation: SCRIPT ident '(' . script_body ')'

    IF  shift, and go to state 41

    script_body      go to state 42
    script_block     go to state 43
    script_if_block  go to state 44


state 37

    9 worldscript: WORLDSCRIPT '(' . script_then_body ')'

    IDENTIFIER  shift, and go to state 9

    IDENTIFIER  [reduce using rule 24 (script_then_body)]
    $default    reduce using rule 24 (script_then_body)

    script_then_body  go to state 45
    assignment        go to state 46
    function_call     go to state 47
    ident             go to state 48


state 38

   29 formal_params: '(' formal_parameter_list ')' .

    $default  reduce using rule 29 (formal_params)


state 39

   30 formal_parameter_list: formal_parameter_list ',' . formal_parameter

    IDENTIFIER  shift, and go to state 9

    formal_parameter  go to state 49
    ident             go to state 35


state 40

   32 formal_parameter: ident ':' . type

    FLOAT   shift, and go to state 28
    STRING  shift, and go to state 29
    OBJECT  shift, and go to state 30
    GROUP   shift, and go to state 31

    type  go to state 50


state 41

   19 script_if_block: IF . '(' if_conjunction ')'

    '('  shift, and go to state 51


state 42

   15 script_implementation: SCRIPT ident '(' script_body . ')'
   17 script_body: script_body . script_block

    IF   shift, and go to state 41
    ')'  shift, and go to state 52

    script_block     go to state 53
    script_if_block  go to state 44


state 43

   16 script_body: script_block .

    $default  reduce using rule 16 (script_body)


state 44

   18 script_block: script_if_block . script_then_block

    THEN  shift, and go to state 54

    script_then_block  go to state 55


state 45

    9 worldscript: WORLDSCRIPT '(' script_then_body . ')'
   27 script_then_body: script_then_body . function_call
   28                 | script_then_body . assignment

    IDENTIFIER  shift, and go to state 9
    ')'         shift, and go to state 56

    assignment     go to state 57
    function_call  go to state 58
    ident          go to state 48


state 46

   26 script_then_body: assignment .

    $default  reduce using rule 26 (script_then_body)


state 47

   25 script_then_body: function_call .

    $default  reduce using rule 25 (script_then_body)


state 48

   46 assignment: ident . '=' expression
   47 function_call: ident . params

    '('  shift, and go to state 59
    '='  shift, and go to state 60

    params  go to state 61


state 49

   30 formal_parameter_list: formal_parameter_list ',' formal_parameter .

    $default  reduce using rule 30 (formal_parameter_list)


state 50

   32 formal_parameter: ident ':' type .

    $default  reduce using rule 32 (formal_parameter)


state 51

   19 script_if_block: IF '(' . if_conjunction ')'

    FLOATNUMBER  shift, and go to state 62
    IDENTIFIER   shift, and go to state 9

    FLOATNUMBER  [reduce using rule 20 (if_conjunction)]
    IDENTIFIER   [reduce using rule 20 (if_conjunction)]
    $default     reduce using rule 20 (if_conjunction)

    if_conjunction    go to state 63
    float_expression  go to state 64
    function_call     go to state 65
    ident             go to state 66


state 52

   15 script_implementation: SCRIPT ident '(' script_body ')' .

    $default  reduce using rule 15 (script_implementation)


state 53

   17 script_body: script_body script_block .

    $default  reduce using rule 17 (script_body)


state 54

   23 script_then_block: THEN . '(' script_then_body ')'

    '('  shift, and go to state 67


state 55

   18 script_block: script_if_block script_then_block .

    $default  reduce using rule 18 (script_block)


state 56

    9 worldscript: WORLDSCRIPT '(' script_then_body ')' .

    $default  reduce using rule 9 (worldscript)


state 57

   28 script_then_body: script_then_body assignment .

    $default  reduce using rule 28 (script_then_body)


state 58

   27 script_then_body: script_then_body function_call .

    $default  reduce using rule 27 (script_then_body)


state 59

   33 params: '(' . actual_parameter_list ')'

    FLOATNUMBER       shift, and go to state 68
    CHARACTER_STRING  shift, and go to state 69
    IDENTIFIER        shift, and go to state 9

    $default  reduce using rule 36 (actual_parameter_list)

    actual_parameter_list  go to state 70
    actual_parameter       go to state 71
    expression             go to state 72
    assignment             go to state 73
    function_call          go to state 74
    ident                  go to state 75


state 60

   46 assignment: ident '=' . expression

    FLOATNUMBER       shift, and go to state 68
    CHARACTER_STRING  shift, and go to state 69
    IDENTIFIER        shift, and go to state 9

    expression     go to state 76
    assignment     go to state 73
    function_call  go to state 74
    ident          go to state 75


state 61

   47 function_call: ident params .

    $default  reduce using rule 47 (function_call)


state 62

   43 float_expression: FLOATNUMBER .

    $default  reduce using rule 43 (float_expression)


state 63

   19 script_if_block: IF '(' if_conjunction . ')'
   22 if_conjunction: if_conjunction . float_expression

    FLOATNUMBER  shift, and go to state 62
    IDENTIFIER   shift, and go to state 9
    ')'          shift, and go to state 77

    float_expression  go to state 78
    function_call     go to state 65
    ident             go to state 66


state 64

   21 if_conjunction: float_expression .

    $default  reduce using rule 21 (if_conjunction)


state 65

   45 float_expression: function_call .

    $default  reduce using rule 45 (float_expression)


state 66

   44 float_expression: ident .
   47 function_call: ident . params

    '('  shift, and go to state 59

    $default  reduce using rule 44 (float_expression)

    params  go to state 61


state 67

   23 script_then_block: THEN '(' . script_then_body ')'

    IDENTIFIER  shift, and go to state 9

    IDENTIFIER  [reduce using rule 24 (script_then_body)]
    $default    reduce using rule 24 (script_then_body)

    script_then_body  go to state 79
    assignment        go to state 46
    function_call     go to state 47
    ident             go to state 48


state 68

   38 expression: FLOATNUMBER .

    $default  reduce using rule 38 (expression)


state 69

   39 expression: CHARACTER_STRING .

    $default  reduce using rule 39 (expression)


state 70

   33 params: '(' actual_parameter_list . ')'
   34 actual_parameter_list: actual_parameter_list . ',' actual_parameter

    ')'  shift, and go to state 80
    ','  shift, and go to state 81


state 71

   35 actual_parameter_list: actual_parameter .

    $default  reduce using rule 35 (actual_parameter_list)


state 72

   37 actual_parameter: expression .

    $default  reduce using rule 37 (actual_parameter)


state 73

   41 expression: assignment .

    $default  reduce using rule 41 (expression)


state 74

   42 expression: function_call .

    $default  reduce using rule 42 (expression)


state 75

   40 expression: ident .
   46 assignment: ident . '=' expression
   47 function_call: ident . params

    '('  shift, and go to state 59
    '='  shift, and go to state 60

    $default  reduce using rule 40 (expression)

    params  go to state 61


state 76

   46 assignment: ident '=' expression .

    $default  reduce using rule 46 (assignment)


state 77

   19 script_if_block: IF '(' if_conjunction ')' .

    $default  reduce using rule 19 (script_if_block)


state 78

   22 if_conjunction: if_conjunction float_expression .

    $default  reduce using rule 22 (if_conjunction)


state 79

   23 script_then_block: THEN '(' script_then_body . ')'
   27 script_then_body: script_then_body . function_call
   28                 | script_then_body . assignment

    IDENTIFIER  shift, and go to state 9
    ')'         shift, and go to state 82

    assignment     go to state 57
    function_call  go to state 58
    ident          go to state 48


state 80

   33 params: '(' actual_parameter_list ')' .

    $default  reduce using rule 33 (params)


state 81

   34 actual_parameter_list: actual_parameter_list ',' . actual_parameter

    FLOATNUMBER       shift, and go to state 68
    CHARACTER_STRING  shift, and go to state 69
    IDENTIFIER        shift, and go to state 9

    actual_parameter  go to state 83
    expression        go to state 72
    assignment        go to state 73
    function_call     go to state 74
    ident             go to state 75


state 82

   23 script_then_block: THEN '(' script_then_body ')' .

    $default  reduce using rule 23 (script_then_block)


state 83

   34 actual_parameter_list: actual_parameter_list ',' actual_parameter .

    $default  reduce using rule 34 (actual_parameter_list)
